# editcraft

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
copyeditor/: admin.py  apps.py  functions.py  models.py  tests.py  urls.py  views.py
copyeditor/migrations/: 0001_initial.py  0002_user_key.py  0003_archive.py  0004_archive_submit_time.py  0005_archive_title.py  0006_rename_text_archive_edited_text_and_more.py  0007_archive_tracker.py  0008_archive_final_text_archive_preview_text.py  0009_remove_archive_preview_text_remove_archive_tracker.py
copyeditor/static/: styles.css
copyeditor/static/js/: login.js  settings.js  uploader.js  workshop.js  workshop_render.js
copyeditor/templates/: about.html  index.html  layout.html  login.html  settings.html  signup.html  uploader.html  workshop.html  workshop_download.html  workshop_render.html
copyeditor/test_files/: edited.txt  original.txt
editcraft/: asgi.py  settings.py  wsgi.py
